--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -4,7 +4,7 @@
 }
 .heading{
     text-align:center;
-    color: rgb(57, 59, 59);
+    color: rgba(9, 104, 9, 0.747);
     border-bottom: 3px solid rgba(63, 57, 57, 0.603);
 
 }
