--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -8,3 +8,18 @@ width: 100%;
     margin:10px;
     border-radius: 10px;
 }
+.clients-container{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    background-color:#eee;
+    margin: 10px;
+}
+.single-client{
+margin: 10px;
+text-align: center;
+}
+.single-client h1{
+    color: red;
+}
